# AiChemistCodex

./: .env.local  .gitignore  README.md  ToolShedRefactorPlan  config.sample.json
.cursor/: AiChemistCodex.md
AiChemistForge/: mcp_rust_tool.bat  package-lock.json  package.json  pyproject.toml
AiChemistForge/.cursor/: AiChemistForge.md  implementation_plan.md  mcp.json  mcp_troubleshooting.md
AiChemistForge/.cursor/rules/: 00-global.mdc  800-orchestrator-workflow.mdc  811-research-mode.mdc  context.mdc  mcp_python_server_guide.mdc  tests.mdc
AiChemistForge/Plans/Python/: unified_mcp_server_refactor.md
AiChemistForge/TagOutLogs/: Tracker.md
AiChemistForge/TagOutLogs/windows-cli/archive/: 2024-04-03_1900_WinCliToolInterrupted.md
AiChemistForge/ToolRack/Python/: README.md  pyproject.toml  test_server.py
AiChemistForge/ToolRack/Python/src/unified_mcp_server/: __init__.py  main.py
AiChemistForge/ToolRack/Python/src/unified_mcp_server/prompts/: __init__.py  analysis_prompts.py  registry.py
AiChemistForge/ToolRack/Python/src/unified_mcp_server/resources/: __init__.py  registry.py
AiChemistForge/ToolRack/Python/tests/: test_server.py
AiChemistForge/ToolRack/Rust/src/tools/: directory_tree.rs
AiChemistForge/ToolRack/TypeScript/: tsconfig.json
AiChemistForge/ToolRack/TypeScript/src/: index.ts
AiChemistForge/ToolRack/TypeScript/src/server/: server.ts
AiChemistForge/ToolRack/TypeScript/src/tools/: braveSearchTools.ts
AiChemistForge/ToolRack/brave-search/: index.ts  run.js  tsconfig.json
AiChemistForge/ToolRack/compendium_tool/: tsconfig.json
AiChemistForge/ToolRack/cursor-mcp-installer/: package.json
AiChemistForge/ToolRack/cursor-mcp-installer/src/: index.mts  installer.mts  utils.mts
AiChemistForge/ToolRack/typescript/brave-search/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
AiChemistForge/ToolRack/typescript/brave-search/src/: braveSearchTools.ts  server.ts
AiChemistForge/ToolRack/typescript/compendium/src/: server.ts
AiChemistForge/ToolRack/typescript/win-cli-tool/: package-lock.json  package.json
AiChemistForge/ToolRack/typescript/win-cli-tool/src/: index.ts
AiChemistForge/ToolRack/web-crawler/.cursor/rules/: 202-webcrawler-playwright-guide.mdc
AiChemistForge/ToolRack/win-cli-tool/src/tests/: testCases.ts  verify.ts
AiChemistForge/ToolRack/win-cli-tool/src/types/: config.ts  errors.ts
AiChemistForge/ToolRack/win-cli-tool/src/utils/: config.ts  translation.ts  validation.ts  windowsValidation.ts
AiChemistForge/scripts/: check_mcp_logs.ps1  test_mcp_config.bat
(+71 files in other folders)
