[project]
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0.0",
    "uv>=0.7.3",
    "uvicorn>=0.23.1",
]

description     = "MCP server for inspecting local file systems: view directory structures and read files, with Pydantic validation."
name            = "local-file-ingest"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

    [project.scripts]
    mcp-inspect-local = ""

[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.7" ]

[tool.setuptools.packages.find]
include = [ "local_file_ingest*" ]
where   = [ "src" ]


# Optional: Add Ruff and Pyright configuration like in the SDK examples
[tool.pyright]
include  = [ "src/local_file_ingest" ]
venv     = ".venv"
venvPath = "."
# reportMissingImports = true
# reportUnusedVariable = true

[tool.ruff]
line-length    = 88
target-version = "py310"

    [tool.ruff.lint]
    ignore = [  ]
    select = [
        "E",  # pycodestyle errors
        "W",  # pycodestyle warnings
        "F",  # pyflakes
        "I",  # isort
        "UP", # pyupgrade
    ]

# Add dev dependencies if you use uv locally
[tool.uv]
# If you add specific dev dependencies for this renamed project, list them here.
dev-dependencies = [ "pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9" ]

    [tool.uv.sources]
    # thetoolshed-mcp-utils-py = { path = "../../Utils/thetoolshed_mcp_utils_py", editable = true }
